fix(pac): 既存文字コードを保持して専用ホストを移行
UTF-8、BOM付きUTF-16、Windows-31Jを厳密判定し、既存PACのバイト列を再符号化せず専用ホスト経路だけを挿入する。判定不能時は元ファイルを変更せず、一時ファイルも残さない。

検証: 6文字コード・改行条件、不正入力、冪等性、バックアップ完全一致、実サーバーWindows-31J移行、機能25件、Java 17/21/25